# arxiv-latex-mcp

./: .gitignore  README.md  manifest.json  pyproject.toml
local_server/: main.py
src/arxiv_latex_mcp/: __init__.py  server.py
