[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "arxiv-latex-mcp"
version = "0.1.0"
description = "An MCP server that fetches and processes arXiv papers using LaTeX source for accurate equation handling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv-to-prompt>=0.1.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.0",
    "smithery>=0.1.23",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "arxiv_latex_mcp.server:create_server"
